--- a/Module-01/ReduxRawJS/index.html
+++ b/Module-01/ReduxRawJS/index.html
@@ -39,7 +39,7 @@
       </div>
     </div>
 
-    <script src="./App.js"></script>
+    <!-- <script src="./App.js"></script> -->
     <script src="./pureFunction.js"></script>
   </body>
 </html>
