Dom children feature explore

--- a/Module-01/DOM/index.html
+++ b/Module-01/DOM/index.html
@@ -36,7 +36,7 @@
         </div>
 
         <div class="mt-8 gap-4 flex flex-col justify-between bg-purple-100 p-4 rounded-lg md:flex-row md:gap-0">
-          <div class="p-3 border bg-white shadow-md rounded-md">
+          <div class="p-3 border bg-white shadow-md rounded-md incomplete-task">
             <h3 class="text-blue-600 font-medium text-center text-xl border-b mb-3">Incomplete Task</h3>
             <ul class="list-none items" id="items">
               <li class="item flex items-center border-b py-2">
