--- a/Module-01/DOM/index.html
+++ b/Module-01/DOM/index.html
@@ -24,11 +24,11 @@
           <form class="flex justify-center gap-2">
             <input
               type="text"
-              class="border rounded-md border-slate-200 px-4 py-2 outline-none shadow-md"
+              class="border rounded border-slate-200 px-4 py-2 outline-none shadow"
             />
             <button
               type="button"
-              class="bg-white text-purple-500 font-bold px-5 py-2 rounded shadow-md"
+              class="bg-white text-purple-500 font-bold px-5 py-2 rounded shadow active:scale-95"
             >
               Add New
             </button>
