--- a/Module-01/DOM/index.html
+++ b/Module-01/DOM/index.html
@@ -12,8 +12,8 @@
   <body>
     <div class="w-screen h-screen p-10 bg-gray-100 text-slate-700 relative">
       <!-- header -->
-      <h1 id="todo-title" class="max-w-md mx-auto text-center text-2xl font-bold mb-8 uppercase">
-        To Do Application
+      <h1 id="todo-title" class="w-60 h-16 bg-fuchsia-500 max-w-md mx-auto text-center text-2xl font-bold mb-8 uppercase">
+        <span class="text-white">To Do Application</span>        
       </h1>
 
       <!-- counters -->
