--- a/Module-01/DOM/index.html
+++ b/Module-01/DOM/index.html
@@ -12,8 +12,11 @@
   <body>
     <div class="w-screen h-screen p-10 bg-gray-100 text-slate-700 relative">
       <!-- header -->
-      <h1 id="todo-title" class="w-60 h-16 bg-fuchsia-500 max-w-md mx-auto text-center text-2xl font-bold mb-8 uppercase">
-        <span class="text-white">To Do Application</span>        
+      <h1
+        id="todo-title"
+        class="w-60 h-16 bg-fuchsia-500 max-w-md mx-auto text-center text-2xl font-bold mb-8 uppercase"
+      >
+        <span class="text-white">To Do Application</span>
       </h1>
 
       <!-- counters -->
@@ -24,45 +27,54 @@
           <form class="flex justify-center gap-2">
             <input
               type="text"
-              class="border rounded border-slate-200 px-4 py-2 outline-none shadow"
+              class="task-field border rounded border-slate-200 px-4 py-2 outline-none shadow"
             />
             <button
-              type="button"
-              class="bg-white text-purple-500 font-bold px-5 py-2 rounded shadow active:scale-95"
-            >
-              Add New
-            </button>
+              type="submit"
+              class="add-btn bg-white text-purple-500 font-bold px-5 py-2 rounded shadow active:scale-95"
+            > Add New </button>
           </form>
         </div>
 
-        <div class="mt-8 gap-4 flex flex-col justify-between bg-purple-100 p-4 rounded-lg md:flex-row md:gap-0">
+        <div
+          class="mt-8 gap-4 flex flex-col justify-between bg-purple-100 p-4 rounded-lg md:flex-row md:gap-0"
+        >
           <div class="p-3 border bg-white shadow-md rounded-md incomplete-task">
-            <h3 class="text-blue-600 font-medium text-center text-xl border-b mb-3">Incomplete Task</h3>
+            <h3
+              class="text-blue-600 font-medium text-center text-xl border-b mb-3"
+            >
+              Incomplete Task
+            </h3>
             <ul class="list-none items" id="items">
-              <li class="item flex items-center border-b py-2">
-                <input type="checkbox" name="" id="myCheck1">
-                <label for="myCheck1" class="ml-1">Task Name</label>
-                <button type="button" class="ml-6 px-2 bg-blue-200 text-blue-500 rounded">Update</button>
+              <li class="item flex items-center border-b py-2 space-x-1">
+                <input type="checkbox" name="" id="myCheck1" />
+                <label for="myCheck1">Task Name</label>
               </li>
               <li class="item flex items-center border-b py-2">
-                <input type="checkbox" name="" id="myCheck2">
+                <input type="checkbox" name="" id="myCheck2" />
                 <label for="myCheck2" class="ml-1">Task Name</label>
-                <button type="button" class="ml-6 px-2 bg-blue-200 text-blue-500 rounded">Update</button>
               </li>
               <li class="item flex items-center py-2">
-                <input type="checkbox" name="" id="myCheck3">
+                <input type="checkbox" name="" id="myCheck3" />
                 <label for="myCheck3" class="ml-1">Task Name</label>
-                <button type="button" class="ml-6 px-2 bg-blue-200 text-blue-500 rounded">Update</button>
               </li>
             </ul>
           </div>
-          <div class="p-3 border bg-white shadow-md rounded-md">
-            <h3 class="text-blue-600 font-medium text-center text-xl border-b mb-3">Complete Task</h3>
+          <div class="complete-list p-3 border bg-white shadow-md rounded-md">
+            <h3
+              class="text-blue-600 font-medium text-center text-xl border-b mb-3"
+            >
+              Complete Task
+            </h3>
             <ul class="list-none space-y-3">
-              <li class=" item flex items-center  py-2">
-                <input type="checkbox" name="" id="myCheck4">
+              <li class="item flex items-center py-2">
                 <label for="myCheck4" class="ml-1">Task Name</label>
-                <button type="button" class="ml-6 px-2 bg-red-300 text-red-600 rounded">Delete</button>
+                <button
+                  type="button"
+                  class="delete ml-6 px-2 bg-red-300 text-red-600 rounded"
+                >
+                  Delete
+                </button>
               </li>
             </ul>
           </div>
