--- a/Module-01/StateManageJS/index.html
+++ b/Module-01/StateManageJS/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="w-screen h-screen p-10 bg-gray-100 text-slate-700">
       <!-- header -->
-      <h1 class="max-w-md mx-auto text-center text-2xl font-bold">
+      <h1 class="max-w-md mx-auto text-center text-2xl font-bold todo-title">
         Simple Counter Application
       </h1>
 
@@ -38,6 +38,7 @@
       </div>
     </div>
 
-    <script src="./script.js"></script>
+    <!-- <script src="./script.js"></script> -->
+    <script src="./app.js"></script>
   </body>
 </html>
