--- a/Module-01/ReduxRawJS/index.html
+++ b/Module-01/ReduxRawJS/index.html
@@ -40,6 +40,7 @@
     </div>
 
     <!-- <script src="./App.js"></script> -->
-    <script src="./pureFunction.js"></script>
+    <!-- <script src="./pureFunction.js"></script> -->
+    <script src="./new.js"></script>
   </body>
 </html>
